--- a/ex1-alertEvent/public/index.html
+++ b/ex1-alertEvent/public/index.html
@@ -16,7 +16,8 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="app"></div>
+    <div id="essay"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
